--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -1,40 +1,66 @@
 .site-footer {
-    background-color: black;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
+  background-color: black;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
 }
 
 .footer-content {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
-.footer-links ul, .footer-social ul {
-    list-style-type: none;
-    padding: 0;
+.footer-links ul,
+.footer-social ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.footer-links li, .footer-social li {
-    display: inline-block;
-    margin: 0 10px;
+.footer-links li,
+.footer-social li {
+  display: inline-block;
+  margin: 0 10px;
 }
 
-.footer-links a, .footer-social a {
-    color: #fff;
-    text-decoration: none;
+.footer-links a,
+.footer-social a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .footer-social a {
-    font-size: 24px;
-    font-family: cursive;
-    
+  font-size: 24px;
+  font-family: cursive;
 }
 
 .footer-social a:hover {
-    color: #ccc;
+  color: #ccc;
 }
 .footer-links a:hover {
-    color: #ccc;
+  color: #ccc;
+}
+
+/* Footer.css */
+.footer-contact {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.footer-contact ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-contact li {
+  margin-bottom: 10px;
+}
+
+.footer-contact a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-contact a:hover {
+  text-decoration: underline;
 }
